--- a/action.yml
+++ b/action.yml
@@ -46,6 +46,9 @@ inputs:
         description: NuGet server uri hosting the packages, defaults to https://api.nuget.org
         required: false
         default: https://api.nuget.org
+    NUGET_URI:
+        description: NuGet server uri to access packages.
+        required: false
     INCLUDE_SYMBOLS:
         description: Flag to toggle pushing symbols along with nuget package to the server, disabled by default
         required: false
